kube/app/synology-dsm/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: synology-dsm
  namespace: synology-dsm
  labels:
    app.kubernetes.io/name: synology-dsm
spec:
  clusterIP: None
  ports:
  - port: 5001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: synology-dsm
  namespace: synology-dsm
  labels:
    app.kubernetes.io/name: synology-dsm
subsets:
  - addresses:
    - ip: 192.168.1.200
    #- ip: 192.168.1.201
    ports:
      - port: 5001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synology-dsm
  namespace: synology-dsm
  labels:
    app.kubernetes.io/name: synology-dsm
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-secret: "synology-dsm/synology-proxy-ssl"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/proxy-ssl-protocols: "TLSv1.2"
    nginx.ingress.kubernetes.io/proxy-ssl-ciphers: "ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-CHACHA20-POLY1305"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/enable-modsecurity: "false"
spec:
  ingressClassName: nginx-external
  tls:
  - hosts:
    - synology.matthew-stratton.me
    secretName: synology-tls
  rules:
  - host: synology.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: synology-dsm
            port:
              number: 5001
        path: /
        pathType: Prefix
